<resources>
    <string name="size_slider">Size</string>
    <string name="app_name">Duo Maker: Couple Avatar</string>
    <string name="next">Next</string>
    <string name="language">Language</string>
    <string name="title_1">\u00A0Create your own avatar however you like\u00A0</string>
    <string name="title_2">\u00A0Unlock your stylish &amp; classy look\u00A0</string>
    <string name="title_3">\u00A0A diverse collection of trendy accessories\u00A0</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="pony_maker">DUO\nMAKER</string>
    <string name="cat_random">DUO\nLUCKY ROLL</string>
    <string name="permission">Permission</string>
    <string name="storage">Storage\u00A0</string>
    <string name="continue_per">\u00A0Continue\u00A0</string>
    <string name="notification">Notification\u00A0</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">\u00A0Allow</string>
    <string name="to_access">to access photos on your device\u00A0</string>
    <string name="to_access_13">to access notification on your device\u00A0</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="add_image">Add image</string>
    <string name="text">Text</string>
    <string name="type_your_content">Type_your_content</string>
    <string name="loading">Loading</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">Haven’t saved it yet, do you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="null_edt">Please enter text</string>
    <string name="choose_color">Choose color</string>
    <string name="do_you_want_to_reset_all">Change your whole design, are you sure?</string>
    <string name="reset">Reset</string>
    <string name="exit">Exit</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="image_has_been_saved_successfully">Image has been saved successfully!</string>
    <string name="download">Download</string>
    <string name="my_avatar">Character</string>
    <string name="design">Design</string>
    <string name="no_item_here">No item here</string>
    <string name="add_to_whatsapp">Add To WhatsApp</string>
    <string name="add_to_telegram">Add To Telegram</string>
    <string name="share">Share</string>
    <string name="image_not_found">Image not found</string>
    <string name="facebook_not_available">Facebook is not installed or cannot receive this image</string>
    <string name="instagram_not_available">Instagram is not installed or cannot receive this image</string>
    <string name="share_failed">Unable to share the image. Please try again.</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="download_success">Download successful to the %s album</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_want_to_delete_this_item">Are you sure want to delete this item?</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="limit_3_items">At least 3 items are required to create a sticker</string>
    <string name="limit_30_items">Only a maximum of 30 items can be added</string>
    <string name="invalid_action_msg">Application not installed</string>
    <string name="invalid_action">Error</string>
    <string name="download_failed_please_try_again_later">Download failed, please try again later!</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">I need your love</string>

    <string name="one_star_title">Little buddy made me cry</string>

    <string name="two_star_title">I’m a little sad</string>

    <string name="three_star_title">Great job little buddy</string>
    <string name="three_star">I know you won\'t let me be sad</string>

    <string name="four_star_title">You are so handsome</string>
    <string name="four_star">The prince is so handsome</string>

    <string name="five_star_title">I love you so much</string>
    <string name="five_star">let\'s get married</string>

    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="have_rated">Thank you for rate our app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cosplay">DUO\nCOSPLAY</string>
    <string name="cosplay2">Cosplay</string>
    <string name="random">Random</string>
    <string name="my_creation">MY\nCREATION</string>
    <string name="category">Category</string>
    <string name="image">Image</string>
    <string name="color">Color</string>
    <string name="successful">Successful</string>
    <string name="successfully">Successfully</string>
    <string name="try_again">Try again</string>
    <string name="no_internet">No internet</string>
    <string name="internet">Internet</string>
    <string name="please_connect_to_the_internet_to_download_more_data">Please connect to the internet to download more data</string>
    <string name="unstable_connection_please_check_your_network_connection">Unstable connection, please check your network connection</string>
    <string name="ok">Ok</string>
    <string name="please_wait_a_few_seconds_for_data_to_load">Please wait a few seconds for data to load.</string>
    <string name="create_package_name">Create Package Name</string>
    <string name="enter_your_package_name">Enter your package name</string>
    <string name="please_enter_your_package_name">Please enter your package name!</string>
    <string name="this_action_may_contain_advertising">This action can contain ads</string>
    <string name="instruction">Instruction</string>
    <string name="tvCosplay1">Cosplay Mode,</string>
    <string name="tvCosplay2">players are randomly given</string>
    <string name="tvCosplay3">one reference image</string>
    <string name="tvCosplay4">to follow. Your task is to recreate that character as accurately as possible by choosing the right</string>
    <string name="tvCosplay5">hairstyles, outfits, colors, and accessories.</string>
    <string name="tvCosplay6">Every correct match increases your</string>
    <string name="tvCosplay7">percentage score (%).</string>
    <string name="tvCosplay8">The closer your character looks to the random image, the higher your final score will be. Pay attention to small details to achieve the best cosplay result.</string>
    <string name="save">Save</string>
    <string name="error">Error</string>
    <string name="errorcontent">This item is no longer available.</string>
    <string name="facebook_share">Facebook Share</string>
    <string name="instagram_share">Instagram Share</string>
    <string name="bubbles">Bubbles</string>
    <string name="edit">Edit</string>
    <string name="font">Font</string>
    <string name="not_matched">Not Matched</string>
    <string name="cosplay_complete">Cosplay Complete!</string>
    <string name="you_lose">You Losed!</string>
    <string name="victory">Victory</string>
    <string name="done">Done</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_watch_full_ads">Please Watch Full Ads</string>
    <string name="load_ads_fail">Load Ads Fail</string>
    <string name="watch_a_short_ad_to_generate_a_random_anime">Watch a short ad to generate a Random Anime</string>
    <string name="loading_">Loading...</string>
    <string name="players_receive_a_random">Players receive a random reference image and must recreate the character by choosing matching hairstyles, outfits, colors, and accessories. Each correct choice increases the percentage score the closer the character matches the image, the higher the final score.</string>
    <string name="click_the_random">Click the random button below to see what your character is!
    </string>
    <string name="one_star">I will cry all day</string>
    <string name="two_star">I will not eat rice today</string>
</resources>
