<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scvText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/dimension_16"
    android:visibility="gone">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_0"
        app:layout_constraintDimensionRatio="3.6:0.18"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/view"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_0"
        app:layout_constraintDimensionRatio="3.6:0.4"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/view2"/>
    <ScrollView
        android:elevation="@dimen/dimension_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_0"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textSize="@dimen/text_size_20"
                android:fontFamily="@font/jockey_one_regular"
                android:textColor="@color/app_color"/>




            <EditText
                    android:elevation="@dimen/dimension_0"
                    android:id="@+id/edtText"
                    android:layout_marginEnd="@dimen/dimension_16"
                    android:layout_width="0dp"
                    android:shadowColor="@color/transparent"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:paddingHorizontal="@dimen/dimension_12"
                    app:layout_constraintDimensionRatio="3.28:0.4"
                    android:layout_height="@dimen/dimension_0"
                    app:layout_constraintTop_toBottomOf="@+id/txt1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/bg_8_solid_white"
                    android:ellipsize="end"
                    android:fontFamily="@font/itim_regular"
                    android:hint="@string/type_your_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textColorHint="#99868686"
                    android:textSize="@dimen/text_size_14"/>
            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font"
                android:layout_marginTop="@dimen/dimension_10"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintTop_toBottomOf="@+id/edtText"
                android:fontFamily="@font/jockey_one_regular"
                android:textColor="@color/app_color"/>

            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintTop_toBottomOf="@+id/txt2"
                android:id="@+id/rcvFont"
                android:layout_marginTop="@dimen/dimension_4"
                android:layout_width="match_parent"
                app:layout_constraintDimensionRatio="3.6:0.36"
                android:layout_height="@dimen/dimension_0"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_font" />
            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:layout_marginTop="@dimen/dimension_10"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintTop_toBottomOf="@+id/rcvFont"
                android:fontFamily="@font/jockey_one_regular"
                android:textColor="@color/app_color"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTextColor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_0"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimension_4"
                app:layout_constraintDimensionRatio="3.6:0.36"
                app:layout_constraintTop_toBottomOf="@+id/txt3"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_text_color" />

            <Space
                app:layout_constraintTop_toBottomOf="@+id/rcvTextColor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimension_30" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/btnDoneText"
        android:layout_width="@dimen/dimension_0"
        android:elevation="@dimen/dimension_2"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_height="@dimen/dimension_0"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dimension_16"
        android:layout_marginTop="@dimen/dimension_4"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        android:src="@drawable/ic_done_text" />


</androidx.constraintlayout.widget.ConstraintLayout>
