<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80545454"
        android:weightSum="800"
        android:orientation="vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginHorizontal="@dimen/dimension_15">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeWidth="@dimen/dimension_1"
                    app:strokeColor="@color/app_color"
                    app:cardBackgroundColor="@color/app_color2"
                    app:cardCornerRadius="@dimen/dimension_16">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contrainColor"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"


                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">



                    <TextView
                        android:id="@+id/tvTitle"
                        style="@style/single_marquee"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintDimensionRatio="3.22:0.5"
                        android:fontFamily="@font/schoolbell_regular"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/dimension_5"
                        android:text="@string/loading"
                        app:outerStrokeColor="@color/app_color"
                        app:outerStrokeWidth="@dimen/dimension_5"
                        android:textColor="@color/app_color19"
                        android:textSize="@dimen/text_size_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        />
                    <TextView
                        android:id="@+id/txtContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimension_40"
                        android:layout_marginVertical="@dimen/dimension_10"
                        android:fontFamily="@font/schoolbell_regular"
                        android:gravity="center"
                        android:text="@string/haven_t_saved_it_yet_do_you_want_to_exit"
                        android:textSize="@dimen/text_size_16"
                        app:layout_constraintBottom_toTopOf="@+id/progressBar"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                        android:textColor="@color/app_color"
                        />

                    <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                        android:visibility="gone"
                        android:layout_marginTop="@dimen/dimension_7"
                    android:layout_height="@dimen/dimension_50"
                    android:indeterminateTint="@color/app_color19"
                    app:layout_constraintBottom_toTopOf="@+id/txtPlease"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtContent" />
                    <TextView
                        android:id="@+id/txtPlease"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/dimension_5"
                        android:layout_marginHorizontal="@dimen/dimension_40"
                        android:fontFamily="@font/schoolbell_regular"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="@string/please_wait"
                        android:textSize="@dimen/text_size_16"
                        app:layout_constraintBottom_toTopOf="@+id/bgEnd"
                        app:layout_constraintTop_toBottomOf="@+id/progressBar"
                        android:textColor="@color/app_color"
                        />


                    <LinearLayout
                        android:id="@+id/bgEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimension_20"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtPlease">


                        <!--                btnDone-->
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimension_10"
                            app:layout_constraintTop_toBottomOf="@+id/txtContent">
                            <com.google.android.material.card.MaterialCardView
                                    android:id="@+id/btnYes"
                                    android:layout_width="@dimen/dimension_0"
                                    android:layout_height="@dimen/dimension_0"
                                    android:layout_marginHorizontal="@dimen/dimension_8"
                                    app:cardBackgroundColor="@color/app_color2"
                                    app:strokeColor="@color/black"
                                    app:cardCornerRadius="@dimen/dimension_16"
                                    app:strokeWidth="@dimen/dimension_1"
                                    app:layout_constraintDimensionRatio="1.28:0.44"
                                    app:layout_constraintEnd_toStartOf="@+id/btnNo"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                 >
                            <com.google.android.material.card.MaterialCardView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="@dimen/dimension_4"
                                    app:strokeWidth="@dimen/dimension_0"
                                    app:cardCornerRadius="@dimen/dimension_12"
                                    app:cardBackgroundColor="@color/app_color4">


                                <TextView
                                    android:id="@+id/txtYes"
                                    style="@style/single_marquee"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginHorizontal="@dimen/dimension_2"
                                    android:fontFamily="@font/schoolbell_regular"
                                    android:gravity="center"
                                    android:text="@string/yes"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text_size_16"
                                    app:outerStrokeColor="@color/app_color"
                                    app:outerStrokeWidth="@dimen/dimension_3" />
                            </com.google.android.material.card.MaterialCardView>
                            </com.google.android.material.card.MaterialCardView>
                            <com.google.android.material.card.MaterialCardView
                                    android:id="@+id/btnNo"
                                    android:layout_width="@dimen/dimension_0"
                                    android:layout_height="@dimen/dimension_0"
                                    android:layout_marginHorizontal="@dimen/dimension_8"
                                     app:layout_constraintStart_toEndOf="@+id/btnYes"
                                    app:layout_constraintTop_toTopOf="@+id/btnYes"
                                    app:cardBackgroundColor="@color/app_color2"
                                    app:strokeColor="@color/black"
                                    app:cardCornerRadius="@dimen/dimension_16"
                                    app:strokeWidth="@dimen/dimension_1"
                                    app:layout_constraintDimensionRatio="1.28:0.44"
                                    app:layout_constraintEnd_toEndOf="parent"
                            >
                            <com.google.android.material.card.MaterialCardView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="@dimen/dimension_4"
                                    app:strokeWidth="@dimen/dimension_0"
                                    app:cardCornerRadius="@dimen/dimension_12"
                                    app:cardBackgroundColor="@color/app_color16">
                                <TextView
                                    android:id="@+id/txtNo"
                                    style="@style/single_marquee"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginHorizontal="@dimen/dimension_2"
                                    android:fontFamily="@font/schoolbell_regular"
                                    android:gravity="center"
                                    android:text="@string/no"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text_size_16"
                                    app:outerStrokeColor="@color/app_color"
                                    app:outerStrokeWidth="@dimen/dimension_3" />

                            </com.google.android.material.card.MaterialCardView>
                            </com.google.android.material.card.MaterialCardView>
                            <com.google.android.material.card.MaterialCardView



                                    app:cardBackgroundColor="@color/app_color2"
                                    app:strokeColor="@color/black"
                                    app:cardCornerRadius="@dimen/dimension_16"
                                    app:strokeWidth="@dimen/dimension_1"
                                    android:id="@+id/btnOk"
                                    android:layout_width="@dimen/dimension_0"
                                    android:layout_height="@dimen/dimension_0"
                                    android:layout_marginHorizontal="@dimen/dimension_90"
                                    app:layout_constraintDimensionRatio="1.28:0.44"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="@+id/btnNo"
                            >
                            <com.google.android.material.card.MaterialCardView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="@dimen/dimension_4"
                                    app:strokeWidth="@dimen/dimension_0"
                                    app:cardCornerRadius="@dimen/dimension_12"
                                    app:cardBackgroundColor="@color/app_color4">



                                <TextView
                                    android:id="@+id/txtOk"
                                    style="@style/single_marquee"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:fontFamily="@font/schoolbell_regular"
                                    android:gravity="center"
                                    android:text="@string/ok"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/text_size_16"
                                    app:outerStrokeColor="@color/app_color"
                                    app:outerStrokeWidth="@dimen/dimension_3" />

                            </com.google.android.material.card.MaterialCardView>
                            </com.google.android.material.card.MaterialCardView>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>




        </FrameLayout>
    </LinearLayout>
</layout>
